# novel_entity_matcher

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  novelty_entity_matcher_benchmark_results.csv  novelty_strategies_benchmark.csv  novelty_strategies_full_benchmark.csv  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
benchmark_results/: ann_results.json  classifier_compare.json  novelty_quick_test.csv  novelty_standard_full.csv  weight_optimization.json
data/raw/industries/: naics_2022.json
data/raw/universities/: universities.json
docs/: architecture.md  async-guide.md  audit-report.md  classifier-routes-comparison.md  configuration.md  examples.md  index.md  migration-guide.md  novel-class-detection.md  novelty-detection-benchmark.md  phase2-benchmark-results.md  phase2-roadmap.md  quickstart.md  technical-roadmap.md  testing.md  troubleshooting.md
docs/api/: backends.md  benchmarks.md  core.md  exceptions-config.md  extraction.md  index.md  monitoring.md  novelty-clustering.md  novelty-evaluation.md  novelty-proposal.md  novelty-schemas.md  novelty-storage.md  novelty-strategies.md  novelty.md  pipeline.md
docs/archive/: 2026-04-25-benchmark-comprehensive-analysis.md  2026-04-25-novelty-detection-benchmark-root.md  2026-04-25-phase2-benchmark-results.md  index.md  novelty-methods-research.md  pypi-trusted-publishing.md  related-work.md
docs/archive/implementation/: 2026-03-26-mypy-fixes.md
docs/archive/plans/: 2026-03-24-roadmap.md  2026-03-24-technical-roadmap-modular-pipeline.md
docs/experiments/: 20260426-comprehensive-benchmark.md  benchmark-comprehensive-analysis.md  benchmark-results.md  benchmarking.md  country-classifier-scripts.md  index.md  novelty-detection-benchmark.md  speed-benchmark-results.md
docs/methodology/: overview.md
docs/methodology/classification/: bert.md  hybrid.md  index.md  setfit-full.md  setfit-head-only.md  zero-shot.md
docs/methodology/novelty-detection/: clustering.md  confidence.md  conformal-calibration.md  index.md  knn-distance.md  lof.md  mahalanobis-distance.md  oneclass-svm.md  pattern.md  prototypical.md  self-knowledge.md  setfit-centroid-distance.md  setfit-contrastive.md  uncertainty.md
docs/notebooks/: index.md
docs/plans/: 2026-03-04-hierarchical-entity-categorization-design.md
examples/: README.md  async_examples.py  hierarchical_matching_example.py  novel_discovery_example.py  oneclass_training_example.py  pattern_strategy_example.py  prototypical_training_example.py  setfit_novelty_training_example.py
examples/current/: basic_matcher.py  trained_matcher.py
examples/raw/: basic_usage.py  country_matching.py  custom_backend.py  zero_shot_classification.py
experiments/country_classifier/: country_classifier.py  country_classifier_advanced.py  country_classifier_quick.py
notebooks/: 01_country_matching_explorer.py  01_country_matching_explorer.qmd  02_novel_entity_dashboard.py  02_novel_entity_dashboard.qmd  03_training_impact_analyzer.py  03_training_impact_analyzer.qmd  04_methodology_benchmarks_overview.py  04_methodology_benchmarks_overview.qmd
scripts/: benchmark_bert.py  benchmark_bert_models.py  benchmark_embeddings.py  benchmark_full_pipeline.py  benchmark_novelty_full.py  benchmark_novelty_strategies.py  generate_notebook_docs.py  quick_benchmark.py  visualize_benchmarks.py
src/novelentitymatcher/: __init__.py  api.py  config.py  config_registry.py  exceptions.py
src/novelentitymatcher/backends/: __init__.py  base.py  litellm.py  reranker_st.py  sentencetransformer.py  static_embedding.py
src/novelentitymatcher/benchmarks/: __init__.py  async_bench.py  classifier_bench.py  cli.py  infra_bench.py  loader.py  novelty_bench.py  registry.py  runner.py  shared.py  visualization.py  weight_optimizer.py
src/novelentitymatcher/core/: async_utils.py  bert_classifier.py  blocking.py  classifier.py  embedding_matcher.py  hierarchy.py  hybrid.py  matcher.py  matcher_components.py  matcher_engines.py  matcher_entity.py  matcher_runtime.py  matcher_shared.py  matching_strategy.py  monitoring.py  normalizer.py  reranker.py  vector_store.py
src/novelentitymatcher/ingestion/: __init__.py  base.py  cli.py  currencies.py  industries.py  languages.py  occupations.py  products.py  timezones.py  universities.py
src/novelentitymatcher/monitoring/: __init__.py  metrics.py  performance.py
src/novelentitymatcher/novelty/: __init__.py  cli.py  discovery_base.py  entity_matcher.py
src/semanticmatcher/: __init__.py  config.py
tests/: conftest.py  test_ann_index.py  test_config.py  test_discovery_pipeline_extended.py  test_llm_proposer.py  test_persistence.py  test_phase2_features.py  test_pipeline_builder.py  test_pipeline_contracts.py  test_pipeline_orchestrator.py  test_review_manager.py  test_signal_combiner.py
tests/core/: test_hierarchy.py
tests/integration/: test_async_sync_parity.py  test_integration.py  test_integration_extended.py  test_novel_entity_matcher.py
tests/test_core/: test_async_matcher.py  test_async_utils.py  test_classifier.py  test_matcher.py
tests/test_ingestion/: test_cli.py
tests/test_utils/: test_logging_config.py
tests/unit/: test_api_phase67_exports.py  test_config.py  test_discovery_pipeline.py  test_llm_proposer.py  test_packaging.py  test_phase2_features.py  test_security_logging.py  test_smoke_paths.py  test_smoke_static_embedding.py
(+145 files in other folders)
