[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "novel-entity-matcher"
version = "0.1.0"
description = "Text-to-entity matching with SetFit few-shot learning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "minghao", email = "howt51@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["semantic", "matching", "entity", "embedding", "setfit", "text", "nlp"]
urls = { repository = "https://github.com/minghao51/novel_entity_matcher" }

dependencies = [
    "numpy>=2.0.0",
    "networkx>=3.0,<4.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "setfit>=1.0.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "transformers>=4.45.0,<5.0.0",
    "nltk>=3.9.4",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.0.0",
    "pyyaml>=6.0.0",
    "model2vec>=0.1.0",
    "optuna>=4.8.0",
    "matplotlib>=3.9.4",
]

[project.scripts]
novelentitymatcher-ingest = "novelentitymatcher.ingestion.cli:main"
novelentitymatcher-bench = "novelentitymatcher.benchmarks.cli:main"
novelentitymatcher-review = "novelentitymatcher.novelty.cli:main"

[project.optional-dependencies]
docs = [
    "marimo>=0.23.4",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "nbclient>=0.10.4",
    "ipykernel>=7.2.0",
]

opinion = [
    "aiobreaker>=1.1.0",
    "hdbscan>=0.8.33",
    "hnswlib>=0.8.0",
    "faiss-cpu>=1.7.4",
    "ipywidgets>=8.0.0",
    "litellm>=1.83.7",
    "seaborn>=0.13.2",
    "tenacity>=9.0.0",
    "tqdm>=4.66.0",
    "umap-learn>=0.5",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "build>=1.2.2",
    "html-to-markdown>=1.8.0",
    "mypy>=1.19.1",
    "pip-audit>=2.7.0",
    "pre-commit>=3.6",
    "types-networkx>=3.2",
    "patchright>=1.58.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.1.0",
    "twine>=5.1.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.3.20260205",
    "nbformat>=5.10.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/novelentitymatcher"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "DTZ",
    "T10",
    "ISC",
    "PIE",
    "PT",
    "RUF",
]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["DTZ"]
"notebooks/**" = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra", "--durations=10", "--import-mode=importlib"]
markers = [
    "unit: fast isolated tests with no external dependencies",
    "integration: tests that depend on external services or network access",
    "slow: tests that are expensive to run in default CI",
    "e2e: end-to-end / feature tests that exercise multiple components",
    "hf: Hugging Face model-backed tests",
    "llm: tests that make actual LLM API calls (require API key, slow)",
    "llm_mocked: tests that involve LLM logic but use mocks instead of real API calls",
    "serial: tests that cannot be run in parallel",
    "network: tests that require internet access",
    "smoke: critical path tests",
]
asyncio_mode = "auto"

[tool.mypy]
# Python version to target
python_version = "3.11"

# Warn about various issues
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

# Disallow unsafe code (gradually enable these)
disallow_untyped_defs = false  # Start with false, enable later
disallow_any_generics = false
check_untyped_defs = true

# Type checking mode
strict_optional = true

# Output settings
show_column_numbers = true
show_error_context = true
pretty = true

# Search paths
mypy_path = "src"

# Per-module options (relax checks for external packages)
[[tool.mypy.overrides]]
module = [
    "setfit.*",
    "sentence_transformers.*",
    "transformers.*",
    "torch.*",
    "datasets.*",
    "hdbscan.*",
    "hnswlib.*",
    "faiss.*",
    "litellm.*",
    "model2vec.*",
    "sklearn.*",
    "scipy.*",
    "joblib.*",
    "umap.*",
    "pandas.*",
    "nltk.*",
    "rank_bm25.*",
    "rapidfuzz.*",
    "matplotlib.*",
    "seaborn.*",
    "aiobreaker.*",
    "pydantic_settings.*",
    "tenacity.*",
    "novelentitymatcher.backends.*",
]
ignore_missing_imports = true

# Known-issue modules with complex numpy typing — suppress until refactored
[[tool.mypy.overrides]]
module = [
    "novelentitymatcher.novelty.strategies.*",
    "novelentitymatcher.novelty.clustering.*",
    "novelentitymatcher.novelty.storage.*",
    "novelentitymatcher.novelty.storage.index.*",
    "novelentitymatcher.core.hybrid",
]
no_implicit_optional = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "novelentitymatcher.novelty.strategies.self_knowledge_impl.*",
    "novelentitymatcher.novelty.strategies.prototypical_impl.*",
    "novelentitymatcher.novelty.strategies.oneclass_impl.*",
    "novelentitymatcher.novelty.strategies.setfit_impl.*",
]
ignore_errors = true
